; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_mcd.c_PicoResetMCD.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_mcd.c_PicoResetMCD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64, i32* }

@PicoOpt = common dso_local global i32 0, align 4
@POPT_EN_MCD_RAMCART = common dso_local global i32 0, align 4
@SRam = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PicoResetMCD() #0 {
  %1 = load i32, i32* @PicoOpt, align 4
  %2 = load i32, i32* @POPT_EN_MCD_RAMCART, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 3), align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = call i32* @calloc(i32 1, i32 73728)
  store i32* %9, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 3), align 8
  br label %10

10:                                               ; preds = %8, %5
  br label %18

11:                                               ; preds = %0
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 3), align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 3), align 8
  %16 = call i32 @free(i32* %15)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 2), align 8
  br label %17

17:                                               ; preds = %14, %11
  br label %18

18:                                               ; preds = %17, %10
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SRam, i32 0, i32 1), align 8
  ret i32 0
}

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
